--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "MH-SPAM-BOT",
-  "description": "A POWERFULL AND FAST SPAM BOT MADE BY @PROFESSOR_AGORA.",
-  "logo": "https://te.legra.ph/file/ce8b8e62cd807f75a1653.jpg",
+  "name": "BHAGWAAN'S SOILDERS",
+  "description": "KABHI KABHI LAGTA HAI APUN HAI BHAGWAAN HAI @PROFESSOR_AGORA.",
+  "logo": "https://te.legra.ph/file/123619b3724cffe25680e.jpg",
   "keywords": [
     "spambot",
     "telegram",
